--- a/client.html
+++ b/client.html
@@ -12,7 +12,7 @@
 
 <div id="mainpart">
 
-    <input  type="button" name="Click" value="Push to send a REST " onclick="myRestFunc()" >
+    <input  type="button" name="Click" value="REST " onclick="myRestFunc()" >
     &nbsp A szervertol kapott uzenet:: &nbsp <span id="message_from_server">  Meg varni kell   </span>
 
 </div>
